Run the test suite on JDK 17, 21 and 25
jev4k ships Java 17 bytecode but was only ever tested on the build
toolchain. -Xjdk-release limits the API the sources compile against; it
says nothing about how the classes behave on an older runtime.

A matrix alone wouldn't have changed that, because tests run on the
toolchain JVM whatever the runner uses. -PtestJavaVersion repoints the
test task's javaLauncher, and -XX:+EnableDynamicAgentLoading is now added
only from 21 up: the option arrived in JDK 21, and an unrecognized -XX
option stops JDK 17 from starting at all.

make test-jdk JDK=17 reproduces one CI row. make all-tests runs every
test target there is: the checks, the JDK matrix, the coverage floors,
and the live smoke tests when a key is available in the environment or
.env, skipped rather than failed when there isn't one.

Also adds docs/release-checklist.md, which records what is and isn't set
up for the first release, and drops an unnecessary !! that the compiler
had been warning about in ClientTest.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>